src/test/deca/context/invalid/ContextAvecObjet/DeclClass/classObjet.deca
// Description:
//    Rédéfinition de la classe Objet
//
// Resultats:
//    Erreur contextuelle ligne 8
//    une telle classe est déjà définie

class Object{}